--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -7,6 +7,9 @@ body{
 .price-text, .green-text{
 	color: #108690 !important;
 }
+.red-text{
+	color: red;
+}
 .bg-green-category{
 	height: 40px;
 	background-color: #107080 !important;
@@ -56,7 +59,7 @@ body{
 	.category-comp{
 		margin-bottom: 10px;
 		height: 45px;
-		background-image: url('asset/component/comp-category.png');
+		background-image: url('../../asset/component/comp-category.png');
 	}
 	.remove-effect-hover{
 		color: black;
@@ -65,3 +68,62 @@ body{
 		text-decoration: none; 
 		color: #108690;
 	}
+
+.custom-padding{
+	padding: 1% 3% 1% 3%;
+}
+.padding-20{
+	padding-top: 20px;
+}
+.margin-20{
+	margin-top: 20px;
+}
+
+.padding-10{
+	padding-top: 10px;
+}
+.margin-10{
+	margin-top: 10px;
+}
+
+.padding-5{
+	padding-top: 5px;
+}
+.margin-5{
+	margin-top: 5px;
+}
+
+.font-18-bold{
+	font-size: 1.125em;
+	font-weight: 200; 
+	font-weight: bolder;
+}
+.font-16-bold{
+	font-size: 1.000em;
+	font-weight: 200; 
+	font-weight: bolder;
+}
+.font-16{
+	font-size: 1.000em;
+}
+.font-14{
+	font-size: 0.875em;
+}
+.font-14-bold{
+	font-size: 0.875em;
+	font-weight: 200; 
+	font-weight: bolder;
+}
+
+.text-right{
+	text-align: right;
+}
+.text-left{
+	text-align: left;
+}
+.text-center{
+	text-align: center;
+}
+.text-justify{
+	text-align: justify;
+}
